2006-05-03  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/logexpfunc.h, itpp/base/matfunc.h,
	itpp/base/specmat.cpp, itpp/comm/channel.cpp,
	itpp/comm/modulator.cpp, itpp/signal/sigfun.cpp,
	itpp/signal/transforms.cpp, itpp/srccode/vq.h: 
	Fixed bug [1480535]. Now needed_bits() returns a proper number of
	bits required to represent integer `n', e.g. "needed_bits(0) = 1", 
	"needed_bits(7) = 3" and "needed_bits(8) = 4".

	* itpp/itmex.h: Fixed a small bug related to missing #include
	statement and cleaned up the code.

2006-05-02  Erik G. Larsson <erik_g_larsson@users.sourceforge.net>

	* itpp/base/svec.h: Fixed a bug in the == operator. Thanks to
	Mattias Andersson for discovering the bug.

2006-04-29  Adam Piatyszek  <ediap@users.sourceforge.net>

	* doc/local/authors.doc, doc/local/index.doc.in,
	doc/local/sources.mk: Added AUTHORS page.

	* doc/local/help_wanted.doc: Cosmetic changes.
	
2006-04-27  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/comm/galois.cpp: Added missing include file with log2()
	function declaration.

	* doc/sourceforge/howto_release_itpp.html: Updated due to CVS to
	SVN repository migration.

	* Redesign, separation and regrouping of some functions from the
	base module.

	The following changes have been applied:
	- Now using one overloaded and templated "apply_function" instead
	  of a set of various "vec_function" and "mat_function" in
	  "help_functions.*". Such a templated "apply_function", with the
	  same functionality, was implemented in "matfunc.*". Thus,
	  removed. 
        - Moved trigonometric and hyperbolic functions (all inline, and
	  both ones for scalars and vectors) to a separate header file
	  "trihypfunc.h".
        - Moved logarithmic and exponential functions to a separate header
	  file "logexpfunc.h".
        - Moved error functions to separate files "errorfunc.*".
        - Merged elementary mathematics functions from "scalfunc.*" with