@@ -1,3 +1,8 @@
+2006-05-04  Adam Piatyszek  <ediap@users.sourceforge.net>
+
+	* itpp/itmex.h: Fixed missing std:: specifiers before complex<>
+	types.
+
 2006-05-03  Adam Piatyszek  <ediap@users.sourceforge.net>
 
 	* itpp/base/logexpfunc.h, itpp/base/matfunc.h,
